fix: Aggregation LIMIT operation should be last